--- a/front/src/component/header/index.css
+++ b/front/src/component/header/index.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
     gap: 12px;
 }
 
@@ -18,3 +19,11 @@
     font-family: "Jost", sans-serif;
     color: #939199;
 }
+
+.heading__title--account {
+    font-size: 20px;
+    font-family: "Jost", sans-serif;
+    font-weight: 500;
+    color: #1D1D1F;
+}
+
