--- a/front/src/component/buttons/index.css
+++ b/front/src/component/buttons/index.css
@@ -34,3 +34,8 @@
     border: 1px solid #775CE5;
     font-family: "Jost", sans-serif;
 }
+
+.button--alert {
+    color: #F23152;
+    border-color: #F23152;
+}
