--- a/front/src/container/sign-in/index.css
+++ b/front/src/container/sign-in/index.css
@@ -1,6 +1,14 @@
-.login { 
-    padding: 60px 20px 30px;
-    display: flex;
-    flex-direction: column;
-    gap: 32px; 
+.text {
+    font-size: 14px;
+    font-family: "Jost", sans-serif;
+    color: #1D1D1F;
+}
+
+.text--purple {
+    color: #775CE5;
+    transition: opacity 0.3s;
+}
+
+.text--purple:hover {
+    opacity: 0.7;
 }
