--- a/front/src/page/index.css
+++ b/front/src/page/index.css
@@ -5,9 +5,9 @@
     justify-content: space-between;
    
     width: 393px;
-    height: 100vh;
+    height: 1000px;
     border-radius: 24px;
-    background-color: #FFFFFF;
+    background-color: #F5F5F7;
 
     overflow: hidden;
 }
