--- a/front/src/component/account-header/index.css
+++ b/front/src/component/account-header/index.css
@@ -1,14 +1,14 @@
-.header {
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
+.head {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
 }
 
 .title {
-    font-size: 20px;
-    font-family: "Jost", sans-serif;
-    font-weight: 500;
-    color: #1D1D1F;
-    text-align: center;
+  font-size: 20px;
+  font-family: "Jost", sans-serif;
+  font-weight: 500;
+  color: #1d1d1f;
+  text-align: center;
 }
